--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">AnotoApp</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="home">home</string>
+    <string name="taks">tasks</string>
+    <string name="task">task</string>
+    <string name="helloprofile">hello progile</string>
+    <string name="profile">profile</string>
 </resources>
