add layout for each page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="task">task</string>
     <string name="helloprofile">hello progile</string>
     <string name="profile">profile</string>
+    <string name="tasks">task</string>
+    <string name="Home">home</string>
 </resources>
