add create button in taskfragment and rmv text layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="profile">profile</string>
     <string name="tasks">task</string>
     <string name="Home">home</string>
+    <string name="Create">Create</string>
 </resources>
